--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="tags">
             <div class="tag-item">
                 <div class="tag__title">Key</div>
-                <div class="tag__content content-key">asdfsd</div>
+                <div class="tag__content content-key"></div>
             </div>
             <div class="tag-item">
                 <div class="tag__title">Location</div>
